<resources>
    <!-- Strings for Activities -->
    <string name="app_name">ScanEat</string>
    <string name="user_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="remember_cb">Remember</string>
    <string name="login_button">Login</string>
    <string name="listitem_imagedescription">An image of the listed dish</string>
    <string name="login_facebook">Log in with facebook</string>
    <string name="login_googleplus">Log in with google+</string>
    <string name="rate">Rate</string>
    <string name="dish_presentationrate">Presentation</string>
    <string name="dish_ingredientstitle">Ingredients</string>
    <string name="dish_qualityprice">Quality/Price</string>
    <string name="search_text">Find the best dishes!</string>
    <string name="cuisine">Cuisine</string>
    <string name="ubication">Ubication</string>
    <string name="keyword">Keyword</string>
    <string name="dishes">Dishes</string>
    <string name="restaurants">Restaurants</string>
    <string name="search">search</string>
    <string name="email_hint">Email</string>
    <string name="confirmPasswd_hint">Confirm password</string>
    <string name="termsNconditions_hint">I agree the terms and use conditions</string>

    <!-- Strings for error messages -->
    <string name="login_incorrect">This combination of user and password is incorrect</string>
    <string name="user_incorrect">The user must be an email address</string>
    <string name="password_incorrect_length">Password must contains at least 8 characters</string>
    <string name="password_incorrect_upper">Password must contains at least an upper case letter</string>
    <string name="password_incorrect_lower">Password must contains at least a lower case letter</string>
    <string name="password_incorrect_digit">Password must contains at least a digit</string>
    <string name="field_empty">This field cannot be empty</string>

    <!-- Strings for messages -->
    <string name="login_correct">Login correct</string>
    <string name="restaurant_open">Open</string>
    <string name="restaurant_close">Close</string>

    <!-- Strings for models-->
    <string name="model_dishname">Dish</string>
    <string name="model_restaurant">Restaurant</string>
    <string name="model_distance">Distance</string>
    <string name="model_prices">Prices</string>
    <string name="model_opened">Opened</string>
    <string name="model_rating">Rating</string>



    <!--Strings for action bar -->
    <string name="user_preferences">User profile</string>
    <string name="general_settings">General settings</string>
    <string name="orderby_rating">Order by rating</string>
    <string name="about">About</string>
    <string name="filters">Filters</string>
    <string name="Signup_button">Sign Up</string>
    <string name="email_incorrect">This email address isn\'t valid</string>
    <string name="passsword_not_equal">Password fields aren\'t equals</string>

</resources>
