<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/filters"
        android:id="@+id/menu_filters"
        app:showAsAction="never"/>
    <item android:title="@string/user_preferences"
        android:id="@+id/menu_userpreferences"
        app:showAsAction="never"/>
    <item android:title="@string/general_settings"
        android:id="@+id/menu_generalsettings"
        app:showAsAction="never"/>
    <item android:title="@string/orderby_rating"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        app:showAsAction="ifRoom"
        android:id="@+id/menu_action_sort"
        />
    <item android:title="@string/about"
        android:id="@+id/menu_about"/>
</menu>