<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance"
        app:hintTextAppearance="@style/hint_appearance"
        android:id="@+id/txiUser">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_hint"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txiUser"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorTextAppearance="@style/error_appearance"
        app:hintTextAppearance="@style/hint_appearance"
        app:counterTextAppearance="@style/counter_appearance"
        android:id="@+id/txiPassword">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:text="@string/remember_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txiPassword"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/cbRemember" />

    <Button
        android:text="@string/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbRemember"
        android:layout_centerHorizontal="true"
        android:onClick="login"
        android:id="@+id/btnLogin" />

    <Button
        android:text="@string/login_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_btnfacebook"
        android:id="@+id/btnlogin_facebook"
        android:onClick="login"/>

    <Button
        android:text="@string/login_googleplus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnlogin_facebook"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnlogin_googleplus"
        android:onClick="login"/>
</RelativeLayout>