<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/listitem_imagedescription"
        android:id="@+id/listitem_dish_image" />

    <TextView
        android:text="@string/model_dishname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/listitem_dish_image"
        android:layout_toEndOf="@+id/listitem_dish_image"
        android:textSize="@dimen/text_big"
        android:id="@+id/listitem_dish_dishname" />

    <TextView
        android:text="@string/model_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/listitem_dish_dishname"
        android:layout_toRightOf="@+id/listitem_dish_image"
        android:layout_toEndOf="@+id/listitem_dish_image"
        android:textSize="@dimen/text_normal"
        android:id="@+id/listitem_dish_resutaurant" />

    <TextView
        android:text="@string/model_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/listitem_dish_resutaurant"
        android:layout_toRightOf="@+id/listitem_dish_image"
        android:layout_toEndOf="@+id/listitem_dish_image"
        android:textSize="@dimen/text_normal"
        android:id="@+id/listitem_dish_distance"/>

    <TextView
        android:text="@string/model_opened"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/listitem_dish_dishname"
        android:textSize="@dimen/text_normal"
        android:id="@+id/listitem_dish_opened" />

    <TextView
        android:text="@string/model_prices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_below="@id/listitem_dish_opened"
        android:layout_alignBaseline="@id/listitem_dish_resutaurant"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/text_normal"
        android:id="@+id/listitem_dish_prices" />

    <TextView
        android:text="@string/model_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/listitem_dish_prices"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_alignBaseline="@id/listitem_dish_distance"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/text_normal"
        android:id="@+id/listitem_dish_rating" />


</RelativeLayout>