<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance"
        app:hintTextAppearance="@style/hint_appearance"
        android:id="@+id/signup_txi_username">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_txi_username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance"
        app:hintTextAppearance="@style/hint_appearance"
        android:id="@+id/signup_txi_email">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_txi_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance"
        app:hintTextAppearance="@style/hint_appearance"
        android:id="@+id/signup_txi_passwd">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_txi_passwd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance"
        app:hintTextAppearance="@style/hint_appearance"
        android:id="@+id/signup_txi_confirmPasswd">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmPasswd_hint" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:text="@string/termsNconditions_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_txi_confirmPasswd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/signup_cb_termsNconditions" />

    <Button
        android:text="@string/Signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/app_buttondark"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/signup_cb_termsNconditions"
        android:layout_centerHorizontal="true"
        android:id="@+id/signup_btn_signup"
        android:onClick="onClickSignUp"
        />
</RelativeLayout>