<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/uramaki_unagi_roll_1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/dish_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:paddingBottom="120dp"
        android:orientation="horizontal"
        android:gravity="end"
        android:id="@+id/dish_linearlayout_allergens">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_launcher"
            android:id="@+id/imageView" />

    </LinearLayout>
    <TextView
        android:text="Nombre del plato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextHighlight"
        android:id="@+id/dish_nametxt"
        android:layout_below="@id/dish_linearlayout_allergens"
        android:textSize="@dimen/text_big"
        android:textStyle="normal|bold" />

    <TextView
        android:text="Nombre del restaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:id="@+id/dish_restaurant"
        android:layout_below="@id/dish_nametxt"
        android:textSize="@dimen/text_normal" />

    <TextView
        android:text="19€"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:id="@+id/dish_pricetxt"
        android:layout_alignBaseline="@id/dish_restaurant"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/text_huge" />

    <TextView
        android:text="Descripción del plato....\n.........\n..........."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorDescription"
        android:id="@+id/dish_descriptiontxt"
        android:layout_below="@id/dish_restaurant"
        android:maxLines="4"
        android:textSize="@dimen/text_normal"
        android:minLines="4"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dish_descriptiontxt"
        android:orientation="horizontal"
        android:id="@+id/dish_linearlayout_cuisine">

        <TextView
            android:text="Tipos de cocina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDescription"
            android:textSize="@dimen/text_normal"
            android:id="@+id/dish_cuisine_generacion_dinamica" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dish_linearlayout_cuisine"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/dish_relativelayout_ingredients">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_launcher"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:id="@+id/dish_ingredients_img"/>

        <TextView
            android:text="@string/dish_ingredientstitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextHighlight"
            android:layout_toRightOf="@id/dish_ingredients_img"
            android:layout_toEndOf="@id/dish_ingredients_img"
            android:textSize="@dimen/text_normal"
            android:id="@+id/dish_ingredientstxt" />
        <TextView
            android:text="Ingredientes que contiene"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDescription"
            android:layout_toRightOf="@id/dish_ingredients_img"
            android:layout_toEndOf="@id/dish_ingredients_img"
            android:textSize="@dimen/text_small"
            android:layout_below="@id/dish_ingredientstxt"
            android:id="@+id/dish_ingredientsdescription" />

    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dish_relativelayout_ingredients"
        android:orientation="horizontal"
        android:id="@+id/dish_linearlayout_ratings">

        <TableRow>
        <Button
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/app_button"
            android:textColor="@color/white"
            android:text="@string/rate" />


        <LinearLayout
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_normal"
                android:layout_gravity="center"
                android:text="@string/dish_presentationrate"
                android:textColor="@color/colorTextHighlight"/>
            <!--Ratingbar -->

        </LinearLayout>
        <LinearLayout
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_normal"
                android:gravity="center"
                android:text="@string/dish_qualityprice"
                android:textColor="@color/colorTextHighlight"/>
            <!--Ratingbar -->

        </LinearLayout>
        </TableRow>
    </TableLayout>

</RelativeLayout>

</FrameLayout>